# websrv

./: .gitignore  CMakeLists.txt  README.md  examples.html  functions.html  luaM.h  ssleay32.lib  websrv.cpp  websrv.def  websrv.vcxproj  websrv.vcxproj.filters
libwebserver/: client.c  client.h  dirent.c  dirent.h  gethandler.c  gethandler.h  server.c  server.h  socket.h  web_server.h
output/: foo-cert.pem  help.cfg  oauth2.lua  test.html  test.lua
